# imap-mailbox-cleanup

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-05-04-design.md  2026-05-04-implementation-plan.md  2026-05-04-multi-account-design.md  2026-05-04-multi-account-implementation-plan.md  smoke-test.md
skill/: SKILL.md
src/mailbox_cleanup/: __init__.py  audit.py  auth.py  classify.py  cli.py  cli_helpers.py  config.py  folders.py  imap_client.py  scan.py
src/mailbox_cleanup/operations/: archive.py  attachments.py  bounces.py  dedupe.py  delete.py  filters.py  move.py  unsubscribe.py
tests/: conftest.py  docker-compose.test.yml  test_archive.py  test_attachments.py  test_audit.py  test_auth.py  test_bounces.py  test_classify.py  test_cli_auth.py  test_cli_auth_multi.py  test_cli_config.py  test_cli_data_account.py  test_cli_helpers.py  test_config.py  test_dedupe.py  test_delete.py  test_filters.py  test_folders.py  test_imap_client.py  test_move.py  test_scan.py  test_senders.py  test_smoke.py  test_unsubscribe.py
tests/fixtures/eml/: automated.eml  bounce.eml  newsletter.eml  plain.eml
tests/integration/: test_multi_account.py
