[project]
name = "mailbox-cleanup"
version = "0.1.0"
description = "Hybrid CLI + Claude Skill to clean up an IONOS IMAP mailbox"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "German Rauhut", email = "german@rauhut.com"}]
dependencies = [
    "click>=8.1",
    "imap-tools>=1.5",
    "keyring>=24.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
mailbox-cleanup = "mailbox_cleanup.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailbox_cleanup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: tests that require Docker (Greenmail)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
